Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1423

16K pagesize clients error during ls

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.1.3
    • Lustre 2.1.1, Lustre 1.8.6
    • None
    • clients = ia64 (16Kpagesize) lustre-1.8.6.81-5.1nas
      server = x86(4kpagesize) lustre-2.1.1
    • 2
    • 4558

      Mounting a lustre2.1.1 filesystem on a 1.8.6 client doing a ls will fail with the following error on the client logs.

      LustreError: 2551436:0:(mdc_request.c:983:mdc_readpage()) Unexpected # bytes transferred: 4096 (16384 expected)
      LustreError: 2556239:0:(mdc_request.c:983:mdc_readpage()) Unexpected # bytes transferred: 4096 (16384 expected)
      LustreError: 2556239:0:(dir.c:949:ll_readdir_20()) error reading dir [0x12480001:0xc1bc1b0c:0x0] at 0: rc -71

            ys Yang Sheng
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: